wDesktop 0.2.2
 * Add a button in photos to go back to the previous folder.
 * Make it possible to run wDesktop at the end of Windows installer.

wDesktop 0.2.1
 * Fix French translation for "Refresh".
 * Make it possible to keep wDesktop in the dock on OS X.
